force-app/main/default/objects/Account/fields/Market_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Market_Assignment__c</fullName>
    <formula>IF(
CONTAINS(&quot;AL:AR:GA:LA:MS:NC:OK:SC:TN:TX&quot;,   Region_ID__c  ),&quot;South Market&quot;,
IF(
CONTAINS( &quot;AK:AZ:CA:CO:HI:ID:MT:NM:NV:OR:UT:WA:WY&quot;,  Region_ID__c ),&quot;West Market&quot;,
IF(
CONTAINS(&quot;CT:DC:DE:IA:IL:IN:KS:KY:MA:MA:MD:ME:MI:MN:MO:ND:NE:NH:NJ:NY:OH:PA:RI:SD:VA:VT:WI:WV&quot;,  Region_ID__c  ),&quot;Northeast Market&quot;,
IF(
CONTAINS(&quot;FL&quot;,  Region_ID__c ),&quot;Florida Market&quot;,
IF(
CONTAINS(&quot;Billing State Missing&quot;, Region_ID__c ), &quot;Acc Billing State Missing&quot;, 
&quot;Not Market Assigned&quot;
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Assignment</label>
    <type>Text</type>
</CustomField>