force-app/main/default/objects/Account/fields/MSA_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>MSA_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if MSA has been uploaded for Client Onboarding</description>
    <label>MSA Uploaded</label>
    <type>Checkbox</type>
</CustomField>