force-app/main/default/objects/Account/fields/Next_Monday_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Next_Monday_Date_Formula__c</fullName>
    <formula>TODAY() + 
CASE( 
MOD(TODAY() - DATE( 1900, 1, 7 ), 7 ), 
0, 8, 
1, 7,	
2, 6,	
3, 5, 
4, 4, 
5, 3, 
6, 2, 
0)</formula>
    <label>Next Monday (Date Formula)</label>
    <type>Date</type>
</CustomField>