force-app/main/default/objects/Account/fields/Next_Snow_Job__c.field-meta.xml
<CustomField>
    <fullName>Next_Snow_Job__c</fullName>
    <label>Next Snow Job</label>
    <type>Date</type>
</CustomField>