force-app/main/default/objects/Account/fields/NTE_Not_To_Exceed__c.field-meta.xml
<CustomField>
    <fullName>NTE_Not_To_Exceed__c</fullName>
    <label>NTE (Not To Exceed)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>