force-app/main/default/objects/Account/fields/Number_of_Crews__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Crews__c</fullName>
    <description>The number of crews the contractor business runs or manages.  A crew can be one or more individuals.</description>
    <inlineHelpText>How many crews of workers does the contractor run or manage?</inlineHelpText>
    <label>Number of Crews</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>