force-app/main/default/objects/Account/fields/Number_of_jobs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_jobs__c</fullName>
    <description>Specify how many jobs can the contractor perform in a single day</description>
    <inlineHelpText>Specify how many jobs can the contractor perform in a single day</inlineHelpText>
    <label>Number of jobs a day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>