force-app/main/default/objects/Account/fields/OA_Coverage_Amount__c.field-meta.xml
<CustomField>
    <fullName>OA_Coverage_Amount__c</fullName>
    <description>OA Insurance Coverage Amount</description>
    <label>OA Coverage Amount</label>
    <summarizedField>Contractor_Insurance_Policy__c.Coverage_Limit__c</summarizedField>
    <summaryFilterItems>
        <field>Contractor_Insurance_Policy__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Insurance</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Contractor_Insurance_Policy__c.Verification_Status__c</field>
        <operation>equals</operation>
        <value>Verified</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Contractor_Insurance_Policy__c.Insurance_Type__c</field>
        <operation>equals</operation>
        <value>Occupational Accident</value>
    </summaryFilterItems>
    <summaryForeignKey>Contractor_Insurance_Policy__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>