force-app/main/default/objects/Account/fields/Onboarding_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Start_Date__c</fullName>
    <formula>CASE(
MOD(  Fully_Verified_Date__c - DATE(1900, 1, 7), 7),
0, Fully_Verified_Date__c+1,
1, Fully_Verified_Date__c+1,
2, Fully_Verified_Date__c+1,
3, Fully_Verified_Date__c+1,
4, Fully_Verified_Date__c+1,
5,Fully_Verified_Date__c+3,
6,Fully_Verified_Date__c+2,

Fully_Verified_Date__c)</formula>
    <label>Onboarding Start Date</label>
    <type>Date</type>
</CustomField>