force-app/main/default/objects/Account/fields/Onboarding_Status__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Status__c</fullName>
    <formula>IF(ISBLANK(Fully_Verified_Date__c), &quot;Recruitment&quot;,
IF(TODAY() - Fully_Verified_Date__c &lt;= 7, &quot;Week 1&quot;,
IF(TODAY() - Fully_Verified_Date__c &lt;= 14, &quot;Week 2&quot;,
IF(TODAY() - Fully_Verified_Date__c &lt;= 21, &quot;Week 3&quot;,
IF(TODAY()- Fully_Verified_Date__c &lt;= 28, &quot;Week 4&quot;, &quot;Active&quot;
)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Onboarding Status</label>
    <type>Text</type>
</CustomField>