force-app/main/default/objects/Account/fields/Other_Property_Management_Software__c.field-meta.xml
<CustomField>
    <fullName>Other_Property_Management_Software__c</fullName>
    <description>Please enter the type of property management software being used by client - Lives on Account and Lead Objects</description>
    <label>Other Property Management Software</label>
    <type>TextArea</type>
</CustomField>