force-app/main/default/objects/Account/fields/Parent_Account_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Creation_Date__c</fullName>
    <formula>DATEVALUE( Parent.CreatedDate )</formula>
    <label>Parent Account Creation Date</label>
    <type>Date</type>
</CustomField>