force-app/main/default/objects/Account/fields/Parent_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Status__c</fullName>
    <formula>TEXT( Parent.Status__c  )</formula>
    <label>Parent Account Status</label>
    <type>Text</type>
</CustomField>