force-app/main/default/objects/Account/fields/Parent_Region_Assignment_Count__c.field-meta.xml
<CustomField>
    <fullName>Parent_Region_Assignment_Count__c</fullName>
    <formula>Parent.Region_Assignment_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Region Assignment Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>