force-app/main/default/objects/Account/fields/Portfolio_Type__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Type__c</fullName>
    <label>Portfolio Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single-Family Rental</fullName>
            </value>
            <value>
                <fullName>iBuyer</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Mixed</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>