force-app/main/default/objects/Account/fields/PR_Contractor__c.field-meta.xml
<CustomField>
    <fullName>PR_Contractor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Puerto Rico Contractor</description>
    <label>PR Contractor</label>
    <type>Checkbox</type>
</CustomField>