force-app/main/default/objects/Account/fields/Pressure_Washing__c.field-meta.xml
<CustomField>
    <fullName>Pressure_Washing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pressure Washing</label>
    <type>Checkbox</type>
</CustomField>