force-app/main/default/objects/Account/fields/Previous_Status__c.field-meta.xml
<CustomField>
    <fullName>Previous_Status__c</fullName>
    <description>Previous status when RO is paused</description>
    <label>Previous Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>