force-app/main/default/objects/Account/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to set a default Price Book for an Account. This Price Book will be inherited by the Opportunity / Quote generated from this Account.</description>
    <inlineHelpText>Used to set a default Price Book for an Account. This Price Book will be inherited by the Opportunity / Quote generated from this Account.</inlineHelpText>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>