force-app/main/default/objects/Account/fields/Primary_Phone_From_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Primary_Phone_From_Agreement__c</fullName>
    <label>Primary Phone (From Agreement)</label>
    <type>Phone</type>
</CustomField>