force-app/main/default/objects/Account/fields/Primary_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Time_Zone__c</fullName>
    <label>Primary Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EASTERN</fullName>
            </value>
            <value>
                <fullName>CENTRAL</fullName>
            </value>
            <value>
                <fullName>MOUNTAIN</fullName>
            </value>
            <value>
                <fullName>PHOENIX</fullName>
            </value>
            <value>
                <fullName>PACIFIC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>