force-app/main/default/objects/Account/fields/Primary_Workcrew_Account__c.field-meta.xml
<CustomField>
    <fullName>Primary_Workcrew_Account__c</fullName>
    <formula>Name = Parent.Name &amp;&amp; RecordType.DeveloperName = &quot;Workcrew&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Workcrew Account</label>
    <type>Checkbox</type>
</CustomField>