force-app/main/default/objects/Account/fields/Property_Management_Software__c.field-meta.xml
<CustomField>
    <fullName>Property_Management_Software__c</fullName>
    <description>Lives on Account and Lead Objects</description>
    <label>Property Management Software</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appfollio</fullName>
            </value>
            <value>
                <fullName>Buildium</fullName>
            </value>
            <value>
                <fullName>PropertyMeld</fullName>
            </value>
            <value>
                <fullName>Yardi</fullName>
            </value>
            <value>
                <fullName>RealPage</fullName>
            </value>
            <value>
                <fullName>RentManager</fullName>
            </value>
            <value>
                <fullName>ResMan</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>