force-app/main/default/objects/Account/fields/Property_Tracing__c.field-meta.xml
<CustomField>
    <fullName>Property_Tracing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Tracing</label>
    <referenceTo>Property_Tracing__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>