force-app/main/default/objects/Account/fields/Ready_to_Accept_Work__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_Accept_Work__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field represents the contractors ability to take on work. If it is unchecked we will not assign work.</description>
    <label>Active For Route Op Match</label>
    <type>Checkbox</type>
</CustomField>