force-app/main/default/objects/Account/fields/Reason_For_Inactive_Status__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Inactive_Status__c</fullName>
    <label>Reason For Inactive Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Contractor_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Behavior</fullName>
            </value>
            <value>
                <fullName>Busy With Personal Book of Business</fullName>
            </value>
            <value>
                <fullName>Doesn’t Like Our Processes</fullName>
            </value>
            <value>
                <fullName>Doesn’t Want to Be Apart of Route Optimization</fullName>
            </value>
            <value>
                <fullName>Lack of Communication</fullName>
            </value>
            <value>
                <fullName>Limited Capacity</fullName>
            </value>
            <value>
                <fullName>Negative Experience With a Representative</fullName>
            </value>
            <value>
                <fullName>No Available Work</fullName>
            </value>
            <value>
                <fullName>No Longer in Business</fullName>
            </value>
            <value>
                <fullName>Off-Season</fullName>
            </value>
            <value>
                <fullName>Payout Duration Too Long</fullName>
                <label>Pay Duration</label>
            </value>
            <value>
                <fullName>Payment Dispute</fullName>
            </value>
            <value>
                <fullName>Personal Emergency</fullName>
            </value>
            <value>
                <fullName>Poor Quality</fullName>
            </value>
            <value>
                <fullName>Poor Route Completion</fullName>
            </value>
            <value>
                <fullName>Pricing is Too Low</fullName>
                <label>Pricing</label>
            </value>
            <value>
                <fullName>Rejection Dispute</fullName>
                <label>Rejections</label>
            </value>
            <value>
                <fullName>Routing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>