force-app/main/default/objects/Account/fields/RecordTypeDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeDeveloperName__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RecordTypeDeveloperName</label>
    <type>Text</type>
</CustomField>