force-app/main/default/objects/Account/fields/Recruitment_Status__c.field-meta.xml
<CustomField>
    <fullName>Recruitment_Status__c</fullName>
    <label>Recruitment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Account Validation</fullName>
            </value>
            <value>
                <fullName>First Route Scheduled</fullName>
            </value>
            <value>
                <fullName>Fully Verified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>