force-app/main/default/objects/Account/fields/Reduced_Pressure_Zone_Certification_RBZ__c.field-meta.xml
<CustomField>
    <fullName>Reduced_Pressure_Zone_Certification_RBZ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reduced Pressure Zone Certification (RBZ</label>
    <type>Checkbox</type>
</CustomField>