force-app/main/default/objects/Account/fields/Referral_Code__c.field-meta.xml
<CustomField>
    <fullName>Referral_Code__c</fullName>
    <inlineHelpText>Please enter the referring Contractors Id</inlineHelpText>
    <label>Referral Code</label>
    <length>120</length>
    <type>Text</type>
</CustomField>