force-app/main/default/objects/Account/fields/Referred_By__c.field-meta.xml
<CustomField>
    <fullName>Referred_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact who referred this account to TaskEasy.</description>
    <label>Referred By:</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Referred Accounts</relationshipLabel>
    <relationshipName>Referred_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>