force-app/main/default/objects/Account/fields/Referrer__c.field-meta.xml
<CustomField>
    <fullName>Referrer__c</fullName>
    <description>Lead referral URL</description>
    <label>Referrer URL</label>
    <type>Url</type>
</CustomField>