force-app/main/default/objects/Account/fields/Region_Assignment_Count__c.field-meta.xml
<CustomField>
    <fullName>Region_Assignment_Count__c</fullName>
    <label>Region Assignment Count</label>
    <summaryForeignKey>Region_Assignment__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>