force-app/main/default/objects/Account/fields/Region_ID__c.field-meta.xml
<CustomField>
    <fullName>Region_ID__c</fullName>
    <formula>IF( 
    NOT(ISBLANK( BillingState )),
     BillingState , &quot;Billing State Missing&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region ID</label>
    <type>Text</type>
</CustomField>