force-app/main/default/objects/Account/fields/Request_Account_Deactivation__c.field-meta.xml
<CustomField>
    <fullName>Request_Account_Deactivation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If an account is Active, check to request account deactivation.</description>
    <inlineHelpText>If an account is Active, check to request account deactivation.</inlineHelpText>
    <label>Request Account Deactivation</label>
    <type>Checkbox</type>
</CustomField>