force-app/main/default/objects/Account/fields/RO_Comments__c.field-meta.xml
<CustomField>
    <fullName>RO_Comments__c</fullName>
    <label>RO Comments</label>
    <type>TextArea</type>
</CustomField>