force-app/main/default/objects/Account/fields/RO_Friday_Starting_Location__c.field-meta.xml
<CustomField>
    <fullName>RO_Friday_Starting_Location__c</fullName>
    <description>Friday starting location for route optimization.</description>
    <label>RO Friday Starting Location</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>