force-app/main/default/objects/Account/fields/RO_Market__c.field-meta.xml
<CustomField>
    <fullName>RO_Market__c</fullName>
    <description>Route Optimization Market</description>
    <label>RO Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RO_Market</valueSetName>
    </valueSet>
</CustomField>