force-app/main/default/objects/Account/fields/RO_Monday_Starting_Location__c.field-meta.xml
<CustomField>
    <fullName>RO_Monday_Starting_Location__c</fullName>
    <description>Monday starting location for route optimization.</description>
    <label>RO Monday Starting Location</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>