force-app/main/default/objects/Account/fields/RO_Paused_Until__c.field-meta.xml
<CustomField>
    <fullName>RO_Paused_Until__c</fullName>
    <description>RO will be paused until this date is completed</description>
    <label>RO Paused Until</label>
    <type>Date</type>
</CustomField>