force-app/main/default/objects/Account/fields/RO_Saturday_Starting_Location__c.field-meta.xml
<CustomField>
    <fullName>RO_Saturday_Starting_Location__c</fullName>
    <description>Saturday starting location for route optimization.</description>
    <label>RO Saturday Starting Location</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>