force-app/main/default/objects/Account/fields/RO_Sunday_Starting_Location__c.field-meta.xml
<CustomField>
    <fullName>RO_Sunday_Starting_Location__c</fullName>
    <description>Sunday starting location for route optimization.</description>
    <label>RO Sunday Starting Location</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>