force-app/main/default/objects/Account/fields/RO_Thursday_Starting_Location__c.field-meta.xml
<CustomField>
    <fullName>RO_Thursday_Starting_Location__c</fullName>
    <description>Thursday starting location for route optimization.</description>
    <label>RO Thursday Starting Location</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>