force-app/main/default/objects/Account/fields/RO_Tuesday_Starting_Location__c.field-meta.xml
<CustomField>
    <fullName>RO_Tuesday_Starting_Location__c</fullName>
    <description>Tuesday starting location for route optimization</description>
    <label>RO Tuesday Starting Location</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>