force-app/main/default/objects/Account/fields/RO_Wednesday_Starting_Location__c.field-meta.xml
<CustomField>
    <fullName>RO_Wednesday_Starting_Location__c</fullName>
    <description>Wednesday starting location for route optimization.</description>
    <label>RO Wednesday Starting Location</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>