force-app/main/default/objects/Account/fields/Route_Order_Location__c.field-meta.xml
<CustomField>
    <fullName>Route_Order_Location__c</fullName>
    <label>Route Order Location</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>