force-app/main/default/objects/Account/fields/Route_Order_Location_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Route_Order_Location_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Route Order Location Enabled</label>
    <type>Checkbox</type>
</CustomField>