force-app/main/default/objects/Account/fields/Schedule_Notes__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Notes__c</fullName>
    <description>Add notes specifically about the contractor schedule</description>
    <inlineHelpText>Add notes specifically about the contractor schedule</inlineHelpText>
    <label>Schedule Notes</label>
    <type>TextArea</type>
</CustomField>