force-app/main/default/objects/Account/fields/Secondary_Phone_From_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Phone_From_Agreement__c</fullName>
    <label>Secondary Phone (From Agreement)</label>
    <type>Phone</type>
</CustomField>