force-app/main/default/objects/Account/fields/Service_Area__c.field-meta.xml
<CustomField>
    <fullName>Service_Area__c</fullName>
    <description>Specify the area where the contractor can provide service</description>
    <inlineHelpText>Specify the area where the contractor can provide service</inlineHelpText>
    <label>Service Area</label>
    <type>TextArea</type>
</CustomField>