force-app/main/default/objects/Account/fields/Service_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Service_Frequency__c</fullName>
    <label>Service Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly AFM</fullName>
            </value>
            <value>
                <fullName>Bi-Weekly AFM</fullName>
            </value>
            <value>
                <fullName>Ancillary AFM</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>