force-app/main/default/objects/Account/fields/Snow_Job_Alert__c.field-meta.xml
<CustomField>
    <fullName>Snow_Job_Alert__c</fullName>
    <description>Triggers scheduled flow for daily snow job SMS reminders. SMS reminder is delivered the night before the scheduled job.</description>
    <formula>Next_Snow_Job__c = Today()+1</formula>
    <label>Snow Job Alert Scheduled</label>
    <type>Checkbox</type>
</CustomField>